# google-trends-rs

./: Cargo.toml
src/: client.rs  lib.rs  types.rs
