[package]
name = "google-trends"
version = "0.1.0"
authors = ["jac3km4 <jac3km4@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", default-features = false }

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest.git"
rev = "b0af278f780b8b6fb83dffbd43146537bac65dfb"
default-features = false
features = ["json"]

[target.'cfg(target_arch = "wasm32")'.dependencies.chrono]
features = ["wasmbind"]

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
